# RunItBack

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SUBMISSION.md  pyproject.toml
backend/: config.py  errors.py  logging_setup.py  main.py
backend/agents/: managed_session.py  output_parsers.py  prompts.py  registry.py  runner.py
backend/agents/prompts/: code_auditor.md  paper_analyst.md  preamble.md  reviewer.md  (+1 more)
backend/api/: audits.py  files.py  stream.py  upload.py
backend/orchestrator/: event_bus.py  normalizer.py  pipeline.py  repo_manifest.py  reviewer_checks.py  store.py  user_messages.py
backend/schemas/: claims.py  common.py  events.py  findings.py  inputs.py  report.py  validation.py
backend/tools/: arxiv.py  github.py  http_fetch.py
backend/util/: time.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: create_agents.py  create_environment.py  probe_sdk.py  reparse_report.py  resume_from_phase.py  resume_reviewer.py  smoke_audit.py
tests/backend/: test_api_audit.py  test_api_files.py  test_api_stream.py  test_api_upload.py  test_arxiv.py  test_create_agents.py  test_create_environment.py  test_errors.py  test_event_bus.py  test_github.py  test_http_fetch.py  test_main_health.py  test_managed_session.py  test_normalizer.py  test_output_parsers.py  test_pipeline.py  test_prompts.py  test_registry.py  test_repo_manifest.py  test_reviewer_checks.py  test_runner.py  test_schemas_roundtrip.py  test_store.py  test_time.py  test_user_messages.py
(+52 files in other folders)
